Added signIn and signUp

--- a/src/main/resources/com/example/real_estate_software/CreateAccount.fxml
+++ b/src/main/resources/com/example/real_estate_software/CreateAccount.fxml
@@ -7,22 +7,20 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.real_estate_software.controller.CreateAccountController">
-      <Rectangle arcHeight="10.0" arcWidth="10.0" fill="#add8ffa2" height="300.0" layoutX="44.0" layoutY="68.0" stroke="BLACK" strokeType="INSIDE" width="500.0" />
-      <TextField layoutX="346.0" layoutY="143.0" />
-      <Text layoutX="120.0" layoutY="221.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Phone Number" />
-      <Text layoutX="121.0" layoutY="161.0" strokeType="OUTSIDE" strokeWidth="0.0" text="First Name" />
-      <Text layoutX="121.0" layoutY="161.0" strokeType="OUTSIDE" strokeWidth="0.0" text="First Name" />
-      <Text layoutX="121.0" layoutY="191.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Last Name" />
-      <Text layoutX="120.0" layoutY="251.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Email Address" />
-      <TextField layoutX="348.0" layoutY="175.0" />
-      <TextField layoutX="348.0" layoutY="206.0" />
-      <Text layoutX="186.0" layoutY="55.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Create New Account" textAlignment="CENTER">
-         <font>
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.real_estate_software.controller.CreateAccountController">
+    <Rectangle arcHeight="10.0" arcWidth="10.0" fill="#add8ffa2" height="300.0" layoutX="44.0" layoutY="68.0" stroke="BLACK" strokeType="INSIDE" width="500.0" />
+    <Text layoutX="121.0" layoutY="161.0" strokeType="OUTSIDE" strokeWidth="0.0" text="First Name" />
+    <TextField fx:id="firstNameField" layoutX="346.0" layoutY="143.0" />
+    <Text layoutX="121.0" layoutY="191.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Last Name" />
+    <TextField fx:id="lastNameField" layoutX="348.0" layoutY="175.0" />
+    <Text layoutX="120.0" layoutY="221.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Email Address" />
+    <TextField fx:id="emailField" layoutX="348.0" layoutY="206.0" />
+    <Text layoutX="120.0" layoutY="251.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Password" />
+    <TextField fx:id="passwordField" layoutX="346.0" layoutY="242.0" />
+    <Text layoutX="186.0" layoutY="55.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Create New Account" textAlignment="CENTER">
+        <font>
             <Font size="24.0" />
-         </font>
-      </Text>
-      <TextField layoutX="351.0" layoutY="242.0" />
-      <Button fx:id="createAccountButton" layoutX="254.0" layoutY="298.0" mnemonicParsing="false" text="Create New Account" onAction="#onCreateAccountClick"/>
+        </font>
+    </Text>
+    <Button fx:id="createAccountButton" layoutX="254.0" layoutY="298.0" mnemonicParsing="false" text="Create New Account" onAction="#onCreateAccountClick"/>
 </Pane>
