--- a/src/main/resources/com/example/real_estate_software/main-view.fxml
+++ b/src/main/resources/com/example/real_estate_software/main-view.fxml
@@ -4,6 +4,10 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.ColumnConstraints?>
 
 <VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
       fx:controller="com.example.real_estate_software.controller.MainController">
@@ -11,5 +15,19 @@
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
     </padding>
     <Label text="Main Dashboard"/>
-    <Button fx:id="logOutButton" text="Log Out" onAction="#onLogOutClick"/>
+    <GridPane alignment="CENTER" hgap="5.0" vgap="5.0" >
+        <Label text="First Name:" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+        <Label text="Last Name:" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+        <Label text="Email:" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+        <Label text="Password:" GridPane.columnIndex="0" GridPane.rowIndex="3" />
+        <TextField fx:id="firstNameField" GridPane.columnIndex="1" GridPane.rowIndex="0" maxWidth="Infinity"/>
+        <TextField fx:id="lastNameField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+        <TextField fx:id="emailField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+        <TextField fx:id="passwordField" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+    </GridPane>
+    <HBox alignment="CENTER">
+        <Button fx:id="editButton" text="Edit Account" onAction="#onEditClick"/>
+        <Button fx:id="deleteButton" text="Delete Account" onAction="#onDeleteClick"/>
+        <Button fx:id="logOutButton" text="Log Out" onAction="#onLogOutClick"/>
+    </HBox>
 </VBox>
