--- a/src/main/resources/com/example/real_estate_software/LoginPage.fxml
+++ b/src/main/resources/com/example/real_estate_software/LoginPage.fxml
@@ -9,6 +9,7 @@
 <?import javafx.scene.text.Font?>
 
 
+<?import javafx.scene.image.Image?>
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.real_estate_software.controller.LoginPageController">
     <Label alignment="CENTER" contentDisplay="RIGHT" layoutX="160.0" layoutY="33.0" text="My Home Manager">
         <font>
@@ -18,8 +19,9 @@
     <TextField fx:id="emailField" layoutX="220.0" layoutY="220.0" promptText="Email" />
     <TextField fx:id="passwordField" layoutX="220.0" layoutY="258.0" promptText="Password" />
     <Button fx:id="signInButton" layoutX="237.0" layoutY="320.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="125.0" text="Sign In" onAction="#onSignInClick" />
-    <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="200.0" layoutY="85.0" pickOnBounds="true" preserveRatio="true">
-
+    <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="200.0" layoutY="85.0" pickOnBounds="true"
+               preserveRatio="true">
+        <Image url="@images/HomeLogo.jpg"/>
     </ImageView>
     <Button fx:id="signUpButton" layoutX="237.0" layoutY="354.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="125.0" text="Sign Up" onAction="#onSignUpClick" />
     <Hyperlink layoutX="250.0" layoutY="291.0" text="Forgot Password" />
