--- a/src/main/resources/com/example/real_estate_software/MainDashboard.fxml
+++ b/src/main/resources/com/example/real_estate_software/MainDashboard.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.BorderPane?>
 
 <?import javafx.scene.control.Button?>
-<BorderPane fx:id="dashPage" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="436.0" prefWidth="667.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.real_estate_software.controller.DashController">
+<BorderPane fx:id="dashPage" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="436.0" prefWidth="667.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.real_estate_software.controller.MainDashboardController">
     <center>
         <Accordion prefHeight="257.0" prefWidth="432.0" BorderPane.alignment="CENTER">
             <panes>
@@ -19,7 +19,6 @@
                     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0"/>
                     <Button fx:id="propertyDashboard" text="Property Dashboard" layoutX="10" layoutY="10"
                             onAction="#onPropertyClick"/>
-
                 </TitledPane>
                 <TitledPane animated="false" text="untitled 2">
                     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0"/>
@@ -32,16 +31,15 @@
     </center>
     <top>
         <MenuBar BorderPane.alignment="CENTER">
-            <Menu mnemonicParsing="false" text="Menu">
-                <MenuItem mnemonicParsing="false" text="Close"/>
-            </Menu>
             <Menu mnemonicParsing="false" text="Account">
                 <MenuItem mnemonicParsing="false" text="Edit" onAction="#onEditClick"/>
                 <MenuItem mnemonicParsing="false" text="Delete" onAction="#onDeleteClick"/>
                 <MenuItem mnemonicParsing="false" text="Sign Out" onAction="#onSignOutClick"/>
             </Menu>
-            <Menu mnemonicParsing="false" text="Add new property">
-                <MenuItem mnemonicParsing="false" text="About"/>
+            <Menu mnemonicParsing="false" text="Property">
+                <MenuItem mnemonicParsing="false" text="Add"/>
+                <MenuItem mnemonicParsing="false" text="Edit"/>
+                <MenuItem mnemonicParsing="false" text="Delete"/>
             </Menu>
         </MenuBar>
     </top>
