--- a/src/main/resources/com/example/real_estate_software/EditAccount.fxml
+++ b/src/main/resources/com/example/real_estate_software/EditAccount.fxml
@@ -24,6 +24,7 @@
             <Font size="24.0" />
         </font>
     </Text>
-    <Button fx:id="editButton"  layoutX="204.0" layoutY="298.0" mnemonicParsing="false"  text="Edit Account" onAction="#onEditClick"/>
-    <Button fx:id="backButton"  layoutX="304.0" layoutY="298.0" mnemonicParsing="false"  text="Go Back" onAction="#onBackClick"/>
+    <Button fx:id="editButton"  layoutX="144.0" layoutY="298.0" mnemonicParsing="false"  text="Edit Account" onAction="#onEditClick"/>
+    <Button fx:id="deleteButton"  layoutX="249.0" layoutY="298.0" mnemonicParsing="false"  text="Delete Account" onAction="#onDeleteClick"/>
+    <Button fx:id="backButton"  layoutX="364.0" layoutY="298.0" mnemonicParsing="false"  text="Go Back" onAction="#onBackClick"/>
 </Pane>
