--- a/src/main/resources/com/example/real_estate_software/CreateAccount.fxml
+++ b/src/main/resources/com/example/real_estate_software/CreateAccount.fxml
@@ -23,4 +23,6 @@
         </font>
     </Text>
     <Button fx:id="createAccountButton" layoutX="254.0" layoutY="298.0" mnemonicParsing="false" text="Create New Account" onAction="#onCreateAccountClick"/>
+    <Button fx:id = "backButton" layoutX="14.0" layoutY="15.0" mnemonicParsing="false" text="Back" onAction="#onBackClick"/>
+
 </Pane>
