--- a/src/main/resources/com/example/real_estate_software/PropertyDashboard.fxml
+++ b/src/main/resources/com/example/real_estate_software/PropertyDashboard.fxml
@@ -23,7 +23,7 @@
    <Button fx:id = "maintenanceRequest" layoutX="385.0" layoutY="346.0" mnemonicParsing="false" prefWidth="185.0"
            text="Property Maintenance Request"/>
    <Text layoutX="14.0" layoutY="177.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Total Rental Income"/>
-   <Text layoutX="14.0" layoutY="207.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Number of Vacant Rooms"/>
+   <Text layoutX="14.0" layoutY="207.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Number of Tenants Occupying"/>
    <Button fx:id = "backButton" layoutX="14.0" layoutY="9.0" mnemonicParsing="false" text="Back" onAction="#onBackClick"/>
    <Text layoutX="235.0" layoutY="92.0" strokeType="OUTSIDE" strokeWidth="0.0" text="PROPERTY VALUATION"/>
    <Text layoutX="14.0" layoutY="238.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Car Spot"/>
